# aus-weather-archive

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  samconfig.toml  template.yaml
aus_weather_archive/: app.py  download.py  requirements.txt
